--- a/BrowseMe/Base.lproj/BrowseMe.storyboard
+++ b/BrowseMe/Base.lproj/BrowseMe.storyboard
@@ -169,45 +169,60 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceHorizontal="YES" pagingEnabled="YES" dataMode="prototypes" springLoaded="YES" translatesAutoresizingMaskIntoConstraints="NO" id="31H-C7-b8p">
-                                <rect key="frame" x="0.0" y="180" width="414" height="570"/>
+                                <rect key="frame" x="0.0" y="124" width="414" height="671"/>
                                 <color key="backgroundColor" red="0.93725490570000003" green="0.93725490570000003" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="20" minimumInteritemSpacing="20" id="xVp-Jo-DjM">
-                                    <size key="itemSize" width="274" height="524"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="20" minimumInteritemSpacing="10" id="xVp-Jo-DjM">
+                                    <size key="itemSize" width="275" height="539"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="TabCarouselCollectionViewCell" reuseIdentifier="TabCarouselCollectionViewCell" id="Cgw-dV-wli" customClass="TabCarouselCollectionViewCell" customModule="BrowseMe" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="23" width="274" height="524"/>
+                                        <rect key="frame" x="0.0" y="66" width="275" height="539"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="274" height="524"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="275" height="539"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ddI-fb-c6z">
-                                                    <rect key="frame" x="0.0" y="54" width="274" height="470"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VBs-ZI-n2c">
-                                                    <rect key="frame" x="20" y="14" width="194" height="26"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dd7-du-xmu">
-                                                    <rect key="frame" x="236" y="9" width="30" height="31"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dd7-du-xmu">
+                                                    <rect key="frame" x="227" y="52" width="30" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="MWZ-jC-YLy"/>
+                                                        <constraint firstAttribute="width" constant="30" id="zkH-ix-Hr6"/>
+                                                    </constraints>
                                                     <state key="normal" image="close"/>
                                                     <connections>
                                                         <action selector="tabClose:" destination="Cgw-dV-wli" eventType="touchUpInside" id="mdi-vT-ess"/>
                                                     </connections>
                                                 </button>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ddI-fb-c6z">
+                                                    <rect key="frame" x="0.0" y="90" width="275" height="449"/>
+                                                    <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VBs-ZI-n2c">
+                                                    <rect key="frame" x="20" y="52" width="191" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="dgG-Dh-7nF"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                         </view>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="backgroundColor" red="0.80000000000000004" green="0.80000000000000004" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="ddI-fb-c6z" firstAttribute="top" secondItem="VBs-ZI-n2c" secondAttribute="bottom" constant="8" id="6wL-GA-YeQ"/>
+                                            <constraint firstItem="VBs-ZI-n2c" firstAttribute="top" secondItem="Cgw-dV-wli" secondAttribute="topMargin" id="And-dJ-yVW"/>
+                                            <constraint firstItem="Dd7-du-xmu" firstAttribute="top" secondItem="Cgw-dV-wli" secondAttribute="topMargin" id="GUz-kD-JjW"/>
+                                            <constraint firstAttribute="trailing" secondItem="ddI-fb-c6z" secondAttribute="trailing" id="Ox7-rJ-XcB"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="Dd7-du-xmu" secondAttribute="trailing" constant="10" id="P7l-lp-i8R"/>
+                                            <constraint firstItem="ddI-fb-c6z" firstAttribute="leading" secondItem="Cgw-dV-wli" secondAttribute="leading" id="ZuL-Mz-p5h"/>
+                                            <constraint firstItem="VBs-ZI-n2c" firstAttribute="leading" secondItem="Cgw-dV-wli" secondAttribute="leadingMargin" constant="12" id="eCZ-oN-AKe"/>
+                                            <constraint firstAttribute="bottom" secondItem="ddI-fb-c6z" secondAttribute="bottom" id="ojC-DM-FCR"/>
+                                            <constraint firstItem="Dd7-du-xmu" firstAttribute="leading" secondItem="VBs-ZI-n2c" secondAttribute="trailing" constant="16" id="vMm-mE-bLD"/>
+                                        </constraints>
                                         <connections>
                                             <outlet property="tabImage" destination="ddI-fb-c6z" id="gEc-zC-3f7"/>
                                             <outlet property="tabTitial" destination="VBs-ZI-n2c" id="szT-Wd-0y8"/>
@@ -236,13 +251,13 @@
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="FVM-aT-Opt" firstAttribute="bottom" secondItem="31H-C7-b8p" secondAttribute="bottom" constant="112" id="2HO-p6-EzF"/>
-                            <constraint firstItem="31H-C7-b8p" firstAttribute="trailing" secondItem="FVM-aT-Opt" secondAttribute="trailing" id="8l8-DN-iV6"/>
-                            <constraint firstItem="31H-C7-b8p" firstAttribute="leading" secondItem="FVM-aT-Opt" secondAttribute="leading" id="HXy-it-mb5"/>
+                            <constraint firstItem="FVM-aT-Opt" firstAttribute="bottom" secondItem="31H-C7-b8p" secondAttribute="bottom" constant="67" id="91e-FT-T2z"/>
+                            <constraint firstItem="31H-C7-b8p" firstAttribute="top" secondItem="FVM-aT-Opt" secondAttribute="top" constant="80" id="FhZ-3l-TGy"/>
                             <constraint firstItem="kgq-k0-Ibl" firstAttribute="leading" secondItem="FVM-aT-Opt" secondAttribute="leading" constant="359" id="Poi-gc-YpV"/>
-                            <constraint firstItem="31H-C7-b8p" firstAttribute="top" secondItem="kgq-k0-Ibl" secondAttribute="bottom" constant="64" id="kQc-SM-MlZ"/>
                             <constraint firstItem="kgq-k0-Ibl" firstAttribute="top" secondItem="FVM-aT-Opt" secondAttribute="top" constant="37" id="kZt-Iw-Lgt"/>
+                            <constraint firstItem="31H-C7-b8p" firstAttribute="leading" secondItem="FVM-aT-Opt" secondAttribute="leading" id="nxZ-88-B82"/>
                             <constraint firstItem="FVM-aT-Opt" firstAttribute="trailing" secondItem="kgq-k0-Ibl" secondAttribute="trailing" constant="20" id="qEe-Mb-qt1"/>
+                            <constraint firstItem="31H-C7-b8p" firstAttribute="trailing" secondItem="FVM-aT-Opt" secondAttribute="trailing" id="yv2-3i-5xs"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="FVM-aT-Opt"/>
                     </view>
