--- a/BrowseMe/Base.lproj/BrowseMe.storyboard
+++ b/BrowseMe/Base.lproj/BrowseMe.storyboard
@@ -48,7 +48,7 @@
                                         <state key="normal" title="s" image="setting"/>
                                         <connections>
                                             <action selector="settingButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7Dk-kc-Hd6"/>
-                                            <segue destination="TbM-Ug-na3" kind="presentation" modalPresentationStyle="overCurrentContext" id="QiX-nq-teS"/>
+                                            <segue destination="TbM-Ug-na3" kind="presentation" modalPresentationStyle="overCurrentContext" modalTransitionStyle="crossDissolve" id="QiX-nq-teS"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -169,9 +169,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view alpha="0.29999999999999999" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Az-fp-ff1">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Az-fp-ff1">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1fO-gO-dDe">
                                 <rect key="frame" x="159" y="69" width="230" height="412"/>
