--- a/BrowseMe/Base.lproj/BrowseMe.storyboard
+++ b/BrowseMe/Base.lproj/BrowseMe.storyboard
@@ -22,7 +22,7 @@
                                 <rect key="frame" x="0.0" y="57" width="414" height="50"/>
                                 <subviews>
                                     <textField clipsSubviews="YES" clearsContextBeforeDrawing="NO" alpha="0.75" contentMode="scaleToFill" semanticContentAttribute="spatial" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="  Search or type web address" textAlignment="justified" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Urm-hl-upM">
-                                        <rect key="frame" x="8" y="4" width="309" height="42"/>
+                                        <rect key="frame" x="8" y="4" width="310" height="42"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
@@ -32,11 +32,11 @@
                                         </connections>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oNQ-SH-U0w">
-                                        <rect key="frame" x="327" y="0.0" width="30" height="50"/>
+                                        <rect key="frame" x="327" y="10" width="30" height="30"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" secondItem="oNQ-SH-U0w" secondAttribute="height" multiplier="3:5" id="9kT-mc-dKC"/>
+                                            <constraint firstAttribute="width" secondItem="oNQ-SH-U0w" secondAttribute="height" multiplier="5:5" id="9kT-mc-dKC"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -56,10 +56,10 @@
                                 <constraints>
                                     <constraint firstItem="Urm-hl-upM" firstAttribute="leading" secondItem="Q0f-qI-BNl" secondAttribute="leading" constant="8" id="8Wa-yl-9mc"/>
                                     <constraint firstAttribute="trailing" secondItem="7yk-oO-YR7" secondAttribute="trailing" constant="8" id="CCP-JZ-dLn"/>
-                                    <constraint firstAttribute="bottom" secondItem="oNQ-SH-U0w" secondAttribute="bottom" id="CTt-tT-K1Q"/>
-                                    <constraint firstItem="oNQ-SH-U0w" firstAttribute="top" secondItem="Q0f-qI-BNl" secondAttribute="top" id="Jf0-Nx-JXl"/>
+                                    <constraint firstAttribute="bottom" secondItem="oNQ-SH-U0w" secondAttribute="bottom" constant="10" id="CTt-tT-K1Q"/>
+                                    <constraint firstItem="oNQ-SH-U0w" firstAttribute="top" secondItem="Q0f-qI-BNl" secondAttribute="top" constant="10" id="Jf0-Nx-JXl"/>
                                     <constraint firstItem="7yk-oO-YR7" firstAttribute="top" secondItem="Q0f-qI-BNl" secondAttribute="top" constant="8" id="X0p-Lw-7Xr"/>
-                                    <constraint firstItem="oNQ-SH-U0w" firstAttribute="leading" secondItem="Urm-hl-upM" secondAttribute="trailing" constant="10" id="YbY-m0-K40"/>
+                                    <constraint firstItem="oNQ-SH-U0w" firstAttribute="leading" secondItem="Urm-hl-upM" secondAttribute="trailing" constant="9" id="YbY-m0-K40"/>
                                     <constraint firstAttribute="height" constant="50" id="cxC-Fy-A9f"/>
                                     <constraint firstAttribute="bottom" secondItem="Urm-hl-upM" secondAttribute="bottom" constant="4" id="fOL-P1-s3Z"/>
                                     <constraint firstItem="7yk-oO-YR7" firstAttribute="leading" secondItem="oNQ-SH-U0w" secondAttribute="trailing" constant="15" id="jIX-sy-Nwu"/>
@@ -130,7 +130,7 @@
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cyV-tj-XfT">
                                 <rect key="frame" x="0.0" y="107" width="414" height="695"/>
-                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="0.95178712966844248" green="1" blue="0.99339466784003094" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
